control-plane/custom-gateway-api/conformance/tests/gateway-secret-reference-grant-all-in-namespace.yaml
apiVersion: consul.networking.io/v1beta1
kind: Gateway
metadata:
  name: gateway-secret-reference-grant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend
---
apiVersion: consul.networking.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-all-in-namespace
  namespace: gateway-conformance-web-backend
spec:
  from:
    - group: consul.networking.io
      kind: Gateway
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Secret
